--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,10 @@ a {
     background-color: #e6f0ff;
     /* sửa lại chân ngôi nhà ko nằm đúng dưới đáy nữa là do thằng fix-header cao tận 90px nó đẩy thằng này xuống */
     height: calc(100vh - 90px);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .navbar {
@@ -149,7 +153,7 @@ a {
 }
 
 .hero {
-    padding-top: 130px;
+    /* padding-top: 130px; */
 }
 
 .hero .info {
