--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,8 @@ a {
 }
 
 .feature .list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     margin-top: 70px;
 }
